// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styled GridWrapper items GridItemConstrainedLarge should start at column 1 & span 1 1`] = `
.c3 {
  display: grid;
  grid-column-gap: 1rem;
}

@media (max-width:37.4375rem) {
  .c4 {
    grid-column: 1 / span 1;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c4 {
    grid-column: 1 / span 1;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c4 {
    grid-column: 1 / span 1;
  }
}

@media (min-width:80rem) {
  .c4 {
    grid-column: 1 / span 1;
  }
}

@media (max-width:79.9375rem) {
  .c3 {
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:80rem) {
  .c3 {
    grid-template-columns: repeat(12,1fr);
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c2 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c2 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c2 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c2 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c2 {
    margin-left: 33.333333333333336%;
  }
}

@media (min-width:80rem) {
  .c2 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display:grid) {
  .c2 {
    display: block;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c1 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

<div
  class="c0 c1"
  dir="ltr"
>
  <div
    class="c2"
    dir="ltr"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <div>
          1/4 or 1/5 or 1/8
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Styled GridWrapper items GridItemConstrainedLarge should start at column 1 & span 8 1`] = `
.c3 {
  display: grid;
  grid-column-gap: 1rem;
}

@media (max-width:37.4375rem) {
  .c4 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c4 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c4 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:80rem) {
  .c4 {
    grid-column: 1 / span 8;
  }
}

@media (max-width:79.9375rem) {
  .c3 {
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:80rem) {
  .c3 {
    grid-template-columns: repeat(12,1fr);
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c2 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c2 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c2 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c2 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c2 {
    margin-left: 33.333333333333336%;
  }
}

@media (min-width:80rem) {
  .c2 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display:grid) {
  .c2 {
    display: block;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c1 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

<div
  class="c0 c1"
  dir="ltr"
>
  <div
    class="c2"
    dir="ltr"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <div>
          4/4 or 5/5 or 8/8
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Styled GridWrapper items GridItemConstrainedLarge should start at column 1 & span columns depending on breakpoint 1`] = `
.c3 {
  display: grid;
  grid-column-gap: 1rem;
}

@media (max-width:37.4375rem) {
  .c4 {
    grid-column: 1 / span 2;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c4 {
    grid-column: 1 / span 3;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c4 {
    grid-column: 1 / span 4;
  }
}

@media (min-width:80rem) {
  .c4 {
    grid-column: 1 / span 5;
  }
}

@media (max-width:79.9375rem) {
  .c3 {
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:80rem) {
  .c3 {
    grid-template-columns: repeat(12,1fr);
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c2 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c2 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c2 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c2 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c2 {
    margin-left: 33.333333333333336%;
  }
}

@media (min-width:80rem) {
  .c2 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display:grid) {
  .c2 {
    display: block;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c1 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

<div
  class="c0 c1"
  dir="ltr"
>
  <div
    class="c2"
    dir="ltr"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <div>
          Spanning a various number of columns depending on breakpoint
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Styled GridWrapper items GridItemConstrainedLargeNoMargin should pop out of grid at Group 5 breakpoint 1`] = `
@supports (display:grid) {
  .c0 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c2 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c2 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c2 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c2 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c2 {
    margin-left: 40%;
  }
}

@media (min-width:80rem) {
  .c2 {
    margin-left: 0%;
  }
}

@supports (display:grid) {
  .c2 {
    display: block;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c1 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

<div
  class="c0 c1"
  dir="ltr"
>
  <div
    class="c2 "
    dir="ltr"
  >
    Group 5 pop out grid.
  </div>
</div>
`;

exports[`Styled GridWrapper items GridItemConstrainedLargeNoMargin should start at column 1 & span 1 1`] = `
.c3 {
  display: grid;
  grid-column-gap: 1rem;
}

@media (max-width:37.4375rem) {
  .c4 {
    grid-column: 1 / span 1;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c4 {
    grid-column: 1 / span 1;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c4 {
    grid-column: 1 / span 1;
  }
}

@media (min-width:80rem) {
  .c4 {
    grid-column: 1 / span 1;
  }
}

@media (max-width:79.9375rem) {
  .c3 {
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:80rem) {
  .c3 {
    grid-template-columns: repeat(12,1fr);
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c2 {
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c2 {
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c2 {
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c2 {
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c2 {
    margin-left: 33.333333333333336%;
  }
}

@media (min-width:80rem) {
  .c2 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display:grid) {
  .c2 {
    display: block;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c1 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

<div
  class="c0 c1"
  dir="ltr"
>
  <div
    class="c2"
    dir="ltr"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <div>
          1/4 or 1/5 or 1/8
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Styled GridWrapper items GridItemConstrainedLargeNoMargin should start at column 1 & span 8 1`] = `
.c3 {
  display: grid;
  grid-column-gap: 1rem;
}

@media (max-width:37.4375rem) {
  .c4 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c4 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c4 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:80rem) {
  .c4 {
    grid-column: 1 / span 12;
  }
}

@media (max-width:79.9375rem) {
  .c3 {
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:80rem) {
  .c3 {
    grid-template-columns: repeat(12,1fr);
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c2 {
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c2 {
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c2 {
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c2 {
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c2 {
    margin-left: 33.333333333333336%;
  }
}

@media (min-width:80rem) {
  .c2 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display:grid) {
  .c2 {
    display: block;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c1 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

<div
  class="c0 c1"
  dir="ltr"
>
  <div
    class="c2"
    dir="ltr"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <div>
          4/4 or 5/5 or 8/8
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Styled GridWrapper items GridItemConstrainedLargeNoMargin should start at column 1 & span columns depending on breakpoint 1`] = `
.c3 {
  display: grid;
  grid-column-gap: 1rem;
}

@media (max-width:37.4375rem) {
  .c4 {
    grid-column: 1 / span 2;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c4 {
    grid-column: 1 / span 3;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c4 {
    grid-column: 1 / span 4;
  }
}

@media (min-width:80rem) {
  .c4 {
    grid-column: 1 / span 5;
  }
}

@media (max-width:79.9375rem) {
  .c3 {
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:80rem) {
  .c3 {
    grid-template-columns: repeat(12,1fr);
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c2 {
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c2 {
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c2 {
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c2 {
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c2 {
    margin-left: 33.333333333333336%;
  }
}

@media (min-width:80rem) {
  .c2 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display:grid) {
  .c2 {
    display: block;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c1 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

<div
  class="c0 c1"
  dir="ltr"
>
  <div
    class="c2"
    dir="ltr"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <div>
          Spanning a various number of columns depending on breakpoint
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Styled GridWrapper items GridItemConstrainedMedium should start at column 1 & span 1 1`] = `
.c3 {
  display: grid;
  grid-column-gap: 1rem;
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c4 {
    grid-column: 1 / span 1;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c4 {
    grid-column: 1 / span 1;
  }
}

@media (min-width:80rem) {
  .c4 {
    grid-column: 1 / span 1;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    grid-template-columns: repeat(5,1fr);
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c3 {
    grid-template-columns: repeat(5,1fr);
  }
}

@media (min-width:80rem) {
  .c3 {
    grid-template-columns: repeat(10,1fr);
  }
}

@supports (display:grid) {
  .c3 {
    max-width: initial;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c2 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c2 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c2 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c2 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c2 {
    margin-left: 40%;
  }
}

@media (min-width:80rem) {
  .c2 {
    margin-left: 40%;
  }
}

@supports (display:grid) {
  .c2 {
    display: block;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c1 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

<div
  class="c0 c1"
  dir="ltr"
>
  <div
    class="c2"
    dir="ltr"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <div>
          1/4 or 1/5 or 1/8
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Styled GridWrapper items GridItemConstrainedMedium should start at column 1 & span 8 1`] = `
.c3 {
  display: grid;
  grid-column-gap: 1rem;
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c4 {
    grid-column: 1 / span 5;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c4 {
    grid-column: 1 / span 5;
  }
}

@media (min-width:80rem) {
  .c4 {
    grid-column: 1 / span 8;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    grid-template-columns: repeat(5,1fr);
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c3 {
    grid-template-columns: repeat(5,1fr);
  }
}

@media (min-width:80rem) {
  .c3 {
    grid-template-columns: repeat(10,1fr);
  }
}

@supports (display:grid) {
  .c3 {
    max-width: initial;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c2 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c2 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c2 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c2 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c2 {
    margin-left: 40%;
  }
}

@media (min-width:80rem) {
  .c2 {
    margin-left: 40%;
  }
}

@supports (display:grid) {
  .c2 {
    display: block;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c1 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

<div
  class="c0 c1"
  dir="ltr"
>
  <div
    class="c2"
    dir="ltr"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <div>
          4/4 or 5/5 or 8/8
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Styled GridWrapper items GridItemConstrainedMedium should start at column 1 & span columns depending on breakpoint 1`] = `
.c3 {
  display: grid;
  grid-column-gap: 1rem;
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c4 {
    grid-column: 1 / span 3;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c4 {
    grid-column: 1 / span 4;
  }
}

@media (min-width:80rem) {
  .c4 {
    grid-column: 1 / span 5;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    grid-template-columns: repeat(5,1fr);
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c3 {
    grid-template-columns: repeat(5,1fr);
  }
}

@media (min-width:80rem) {
  .c3 {
    grid-template-columns: repeat(10,1fr);
  }
}

@supports (display:grid) {
  .c3 {
    max-width: initial;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c2 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c2 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c2 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c2 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c2 {
    margin-left: 40%;
  }
}

@media (min-width:80rem) {
  .c2 {
    margin-left: 40%;
  }
}

@supports (display:grid) {
  .c2 {
    display: block;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c1 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

<div
  class="c0 c1"
  dir="ltr"
>
  <div
    class="c2"
    dir="ltr"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <div>
          Spanning a various number of columns depending on breakpoint
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Styled GridWrapper items GridItemConstrainedMediumNoMargin should start at column 1 & span 1 1`] = `
.c3 {
  display: grid;
  grid-column-gap: 1rem;
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c4 {
    grid-column: 1 / span 1;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c4 {
    grid-column: 1 / span 1;
  }
}

@media (min-width:80rem) {
  .c4 {
    grid-column: 1 / span 1;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    grid-template-columns: repeat(5,1fr);
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c3 {
    grid-template-columns: repeat(5,1fr);
  }
}

@media (min-width:80rem) {
  .c3 {
    grid-template-columns: repeat(10,1fr);
  }
}

@supports (display:grid) {
  .c3 {
    max-width: initial;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c2 {
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c2 {
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c2 {
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c2 {
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c2 {
    margin-left: 40%;
  }
}

@media (min-width:80rem) {
  .c2 {
    margin-left: 40%;
  }
}

@supports (display:grid) {
  .c2 {
    display: block;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c1 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

<div
  class="c0 c1"
  dir="ltr"
>
  <div
    class="c2"
    dir="ltr"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <div>
          1/4 or 1/5 or 1/8
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Styled GridWrapper items GridItemConstrainedMediumNoMargin should start at column 1 & span 8 1`] = `
.c3 {
  display: grid;
  grid-column-gap: 1rem;
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c4 {
    grid-column: 1 / span 5;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c4 {
    grid-column: 1 / span 5;
  }
}

@media (min-width:80rem) {
  .c4 {
    grid-column: 1 / span 8;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    grid-template-columns: repeat(5,1fr);
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c3 {
    grid-template-columns: repeat(5,1fr);
  }
}

@media (min-width:80rem) {
  .c3 {
    grid-template-columns: repeat(10,1fr);
  }
}

@supports (display:grid) {
  .c3 {
    max-width: initial;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c2 {
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c2 {
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c2 {
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c2 {
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c2 {
    margin-left: 40%;
  }
}

@media (min-width:80rem) {
  .c2 {
    margin-left: 40%;
  }
}

@supports (display:grid) {
  .c2 {
    display: block;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c1 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

<div
  class="c0 c1"
  dir="ltr"
>
  <div
    class="c2"
    dir="ltr"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <div>
          4/4 or 5/5 or 8/8
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Styled GridWrapper items GridItemConstrainedMediumNoMargin should start at column 1 & span columns depending on breakpoint 1`] = `
.c3 {
  display: grid;
  grid-column-gap: 1rem;
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c4 {
    grid-column: 1 / span 3;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c4 {
    grid-column: 1 / span 4;
  }
}

@media (min-width:80rem) {
  .c4 {
    grid-column: 1 / span 5;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    grid-template-columns: repeat(5,1fr);
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c3 {
    grid-template-columns: repeat(5,1fr);
  }
}

@media (min-width:80rem) {
  .c3 {
    grid-template-columns: repeat(10,1fr);
  }
}

@supports (display:grid) {
  .c3 {
    max-width: initial;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c2 {
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c2 {
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c2 {
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c2 {
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c2 {
    margin-left: 40%;
  }
}

@media (min-width:80rem) {
  .c2 {
    margin-left: 40%;
  }
}

@supports (display:grid) {
  .c2 {
    display: block;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c1 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

<div
  class="c0 c1"
  dir="ltr"
>
  <div
    class="c2"
    dir="ltr"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <div>
          Spanning a various number of columns depending on breakpoint
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Styled GridWrapper items GridItemConstrainedSmall should start at column 1 & span 1 1`] = `
.c4 {
  display: grid;
  grid-column-gap: 1rem;
}

@media (max-width:24.9375rem) {
  .c5 {
    grid-column: 1 / span 1;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c5 {
    grid-column: 1 / span 1;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c5 {
    grid-column: 1 / span 1;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c5 {
    grid-column: 1 / span 1;
  }
}

@media (min-width:80rem) {
  .c5 {
    grid-column: 1 / span 1;
  }
}

@media (max-width:25rem) {
  .c4 {
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c4 {
    grid-template-columns: repeat(4,1fr);
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c4 {
    grid-template-columns: repeat(5,1fr);
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c4 {
    grid-template-columns: repeat(4,1fr);
  }
}

@media (min-width:80rem) {
  .c4 {
    grid-template-columns: repeat(8,1fr);
  }
}

@supports (display:grid) {
  .c4 {
    max-width: initial;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c2 {
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c2 {
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c2 {
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c2 {
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c2 {
    margin-left: 50%;
  }
}

@media (min-width:80rem) {
  .c2 {
    margin-left: 50%;
  }
}

@supports (display:grid) {
  .c2 {
    display: block;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c1 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

@media (max-width:25rem) {
  .c3 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c3 {
    padding: 0 1rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c3 {
    max-width: 66.67%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c3 {
    max-width: 83.33%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c3 {
    max-width: 30rem;
  }
}

@media (min-width:80rem) {
  .c3 {
    max-width: 30.6rem;
  }
}

@supports (display:grid) {
  .c3 {
    max-width: initial;
  }
}

<div
  class="c0 c1"
  dir="ltr"
>
  <div
    class="c2 c3"
    dir="ltr"
  >
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        <div>
          1/4 or 1/5 or 1/8
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Styled GridWrapper items GridItemConstrainedSmall should start at column 1 & span 8 1`] = `
.c4 {
  display: grid;
  grid-column-gap: 1rem;
}

@media (max-width:24.9375rem) {
  .c5 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c5 {
    grid-column: 1 / span 4;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c5 {
    grid-column: 1 / span 5;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c5 {
    grid-column: 1 / span 4;
  }
}

@media (min-width:80rem) {
  .c5 {
    grid-column: 1 / span 6;
  }
}

@media (max-width:25rem) {
  .c4 {
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c4 {
    grid-template-columns: repeat(4,1fr);
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c4 {
    grid-template-columns: repeat(5,1fr);
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c4 {
    grid-template-columns: repeat(4,1fr);
  }
}

@media (min-width:80rem) {
  .c4 {
    grid-template-columns: repeat(8,1fr);
  }
}

@supports (display:grid) {
  .c4 {
    max-width: initial;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c2 {
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c2 {
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c2 {
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c2 {
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c2 {
    margin-left: 50%;
  }
}

@media (min-width:80rem) {
  .c2 {
    margin-left: 50%;
  }
}

@supports (display:grid) {
  .c2 {
    display: block;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c1 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

@media (max-width:25rem) {
  .c3 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c3 {
    padding: 0 1rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c3 {
    max-width: 66.67%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c3 {
    max-width: 83.33%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c3 {
    max-width: 30rem;
  }
}

@media (min-width:80rem) {
  .c3 {
    max-width: 30.6rem;
  }
}

@supports (display:grid) {
  .c3 {
    max-width: initial;
  }
}

<div
  class="c0 c1"
  dir="ltr"
>
  <div
    class="c2 c3"
    dir="ltr"
  >
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        <div>
          4/4 or 5/5 or 8/8
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Styled GridWrapper items GridItemConstrainedSmall should start at column 1 & span columns depending on breakpoint 1`] = `
.c4 {
  display: grid;
  grid-column-gap: 1rem;
}

@media (max-width:24.9375rem) {
  .c5 {
    grid-column: 1 / span 1;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c5 {
    grid-column: 1 / span 2;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c5 {
    grid-column: 1 / span 3;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c5 {
    grid-column: 1 / span 4;
  }
}

@media (min-width:80rem) {
  .c5 {
    grid-column: 1 / span 5;
  }
}

@media (max-width:25rem) {
  .c4 {
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c4 {
    grid-template-columns: repeat(4,1fr);
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c4 {
    grid-template-columns: repeat(5,1fr);
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c4 {
    grid-template-columns: repeat(4,1fr);
  }
}

@media (min-width:80rem) {
  .c4 {
    grid-template-columns: repeat(8,1fr);
  }
}

@supports (display:grid) {
  .c4 {
    max-width: initial;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c2 {
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c2 {
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c2 {
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c2 {
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c2 {
    margin-left: 50%;
  }
}

@media (min-width:80rem) {
  .c2 {
    margin-left: 50%;
  }
}

@supports (display:grid) {
  .c2 {
    display: block;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c1 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

@media (max-width:25rem) {
  .c3 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c3 {
    padding: 0 1rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c3 {
    max-width: 66.67%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c3 {
    max-width: 83.33%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c3 {
    max-width: 30rem;
  }
}

@media (min-width:80rem) {
  .c3 {
    max-width: 30.6rem;
  }
}

@supports (display:grid) {
  .c3 {
    max-width: initial;
  }
}

<div
  class="c0 c1"
  dir="ltr"
>
  <div
    class="c2 c3"
    dir="ltr"
  >
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        <div>
          Spanning a various number of columns depending on breakpoint
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Styled GridWrapper items GridWrapper should render correctly 1`] = `
@supports (display:grid) {
  .c0 {
    display: grid;
    position: initial;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c1 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

<div
  class="c0 c1"
  dir="ltr"
>
  Hello
</div>
`;
